Modificando el visual del componente Calculadora

--- a/src/app/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora.component.html
@@ -1,5 +1,6 @@
-<button (click)="hola()"> Hola</button>
-
+<br/>
+<button mat-flat-button color="warn" (click)="goToEmployees()"> Go to Employees</button>
+<br/><br/>
 <mat-card>
   <mat-card-content>
     <h1>{{ title }}</h1>
