--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,11 @@
 <br>
 <div class="login-container">
     <h2>Login</h2>
-    <form action="/login" method="post">
-        <label for="username">Nombre de usuario:</label>
-        <input type="text" id="username" name="username" required>
+    <form #formLogin="ngForm" (ngSubmit)="login(formLogin)">
+        <label for="email">Nombre de usuario:</label>
+        <input type="text" id="email" name="email" required ngModel>
         <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" required ngModel>
         <input type="submit" value="Iniciar sesión">
     </form>
 </div>
